--- a/01.ipynb
+++ b/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "99cbb0b4",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,8 @@
       "1                  48            High                    3  \n",
       "2                  60            High                    3  \n",
       "3                  45             Low                    1  \n",
-      "4                  55          Medium                    2  \n"
+      "4                  55          Medium                    2  \n",
+      "{'Low': 1, 'Medium': 2, 'High': 3}\n"
      ]
     }
    ],
@@ -45,12 +46,13 @@
     "}\n",
     "\n",
     "df['Traffic_Density_Num'] = df['Traffic Density'].map(density_map)\n",
-    "print(df.head())"
+    "print(df.head())\n",
+    "print(density_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "01b00cba",
    "metadata": {},
    "outputs": [
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "8cefad8e",
    "metadata": {},
    "outputs": [
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "6dba9d48",
    "metadata": {},
    "outputs": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "6b57cfee",
    "metadata": {},
    "outputs": [
@@ -156,7 +158,7 @@
     }
    ],
    "source": [
-    "#Step 5: Weekday vs Weekend Comparison\n",
+    "#Weekday vs Weekend Comparison\n",
     "df['Day_Type'] = df['Day Of Week'].apply(\n",
     "    lambda x: 'Weekend' if x in ['Saturday', 'Sunday'] else 'Weekday'\n",
     ")\n",
@@ -173,8 +175,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
